--- a/DjangoPlaylisty/templates/banner.html
+++ b/DjangoPlaylisty/templates/banner.html
@@ -8,11 +8,11 @@
     </h1>
   </div>
   <div class="bg" style="background-image: url('{% static 'svg/bg.svg' %}')"></div>
-  <div class="arrow">
+  <a  href="#login-to-start" class="arrow">
     <span></span>
     <span></span>
     <span></span>
-  </div>
+  </a>
 
 
   <img class="spotify-logo" src="{% static 'svg/Spotify_Logo_RGB_White.png' %}" alt="">
