--- a/DjangoPlaylisty/templates/custom_playlist.html
+++ b/DjangoPlaylisty/templates/custom_playlist.html
@@ -53,6 +53,14 @@
         </header>
     </section>
 </section>
+<section class="loader-container">
+    <div class="loading-wave">
+        <div class="loading-bar"></div>
+        <div class="loading-bar"></div>
+        <div class="loading-bar"></div>
+        <div class="loading-bar"></div>
+    </div>
+</section>
 
 <script src="{% static 'js/custom-playlist.js' %}"></script>
 {% endblock %}
