--- a/DjangoPlaylisty/templates/generated_playlist.html
+++ b/DjangoPlaylisty/templates/generated_playlist.html
@@ -2,11 +2,13 @@
 {% block content%}
 {% load static %}
 <section id="generated-playlist">
-    <h1>Your playlist</h1>
+    <h1>Playlist generated!</h1>
     <div class="custom-container">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/{{id}}" width="100%"
-            height="700" frameBorder="0" allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px"
+            src="https://open.spotify.com/embed/playlist/{{id}}?utm_source=generator&theme=0" width="100%" height="500"
+            frameBorder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+        </iframe>
     </div>
     <div class="buttons-container">
         <button class="fancy-button" id="home-button" url-data="/">
