--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -812,6 +812,7 @@ h3 {
     width: 100%;
     margin-bottom: 2rem;
     transition: 0.5s opacity ease-in-out;
+    z-index: 2;
 }
 
 .name-input-container {
@@ -856,6 +857,7 @@ h3 {
     align-items: center;
     opacity: 0;
     transition: opacity 1s ease-in-out;
+    z-index: 1;
 }
 
 .loader-container.show {
@@ -868,6 +870,7 @@ main {
 
 #custom-playlist .playlist-container li .left {
     grid-template-columns: 0.2fr 6fr;
+    
 }
 
 .arrow {
