--- a/DjangoPlaylisty/templates/generated_playlist.html
+++ b/DjangoPlaylisty/templates/generated_playlist.html
@@ -11,14 +11,14 @@
         </iframe>
     </div>
     <div class="buttons-container">
-        <button class="fancy-button" id="home-button" url-data="/">
+        <button class="fancy-button" id="home-button" data-url="/">
             Home
         </button>
-        <button class="fancy-button" id="create-playlist-button" url-data="/createplaylist">
+        <button class="fancy-button" id="create-playlist-button" data-url="/createplaylist">
             Create playlist
         </button>
     </div>
-    <script src="{% static 'js/generated-playlist.js' %}"></script>
 </section>
+<script src="{% static 'js/buttons.js' %}"></script>
 
 {% endblock %}
