Actualizar login_to_start.html

--- a/DjangoPlaylisty/templates/login_to_start.html
+++ b/DjangoPlaylisty/templates/login_to_start.html
@@ -22,7 +22,7 @@
   </form>
   {% else %}
   <form action="{% url 'createplaylist' %}">
-    <button class="fancy-button" type="submit">
+    <button data-url="/createplaylist"class="fancy-button" type="submit">
       <span class="button_top">Create playlist</span>
     </button>
   </form>
