--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -301,12 +301,10 @@ body {
     margin-bottom: 10rem;
 }
 
-#login-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
+#login-to-start .buttons-container {
+    width: 60%;
+    max-width: 75ch;
+    margin: 2rem 0;
 }
 
 #login-form a {
@@ -851,7 +849,7 @@ h3 {
     display: flex;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     justify-content: center;
     align-items: center;
