--- a/DjangoPlaylisty/templates/login_to_start.html
+++ b/DjangoPlaylisty/templates/login_to_start.html
@@ -31,7 +31,7 @@
         </button>
       </div>
     </section>
-    <h1>What you can do?</h1>
+    <h1>What can you do?</h1>
     <section>
       <h2>Search for Artists, Albums, or Tracks</h2>
       <p>Using the search bar, enter the name of an artist, album, or track that you want to include in your playlist.
