--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -59,7 +59,7 @@
         <h2 id="total-n">0</h2>
       </div>
     </aside>
-    <button id="generate-playlist-button" class="fancy-button green">
+    <button id="generate-playlist-button" class="fancy-button">
       Generate playlist
     </button>
   </header>
