--- a/DjangoPlaylisty/templates/login_to_start.html
+++ b/DjangoPlaylisty/templates/login_to_start.html
@@ -26,7 +26,7 @@
         <span style="font-weight: bold">artists, albums, or individual songs</span>, we've got you covered.
       </p>
       <div class="buttons-container">
-        <button class="fancy-button green" id="create-playlist-button" data-url="/createplaylist">
+        <button class="fancy-button" id="create-playlist-button" data-url="/createplaylist">
           <span class="button_top">Create playlist</span>
         </button>
       </div>
