--- a/DjangoPlaylisty/templates/generated_playlist.html
+++ b/DjangoPlaylisty/templates/generated_playlist.html
@@ -19,16 +19,14 @@
         </button>
     </div>
 </section>
-<form action="/feedback" method="post">
-    {% csrf_token %}
-    <label for="score">Número:</label>
-    <input type="number" id="score" name="score" required>
-    <br>
-    <label for="description">Texto:</label>
-    <input type="text" id="description" name="description" required>
-    <br>
-    <button type="submit">Enviar</button>
-</form>
+<label for="score">Número:</label>
+<input type="number" id="score" name="score" required>
+<br>
+<label for="description">Texto:</label>
+<input type="text" id="description" name="description" required>
+<br>
+<button id="feedback-button">Enviar</button>
+
 <script src="{% static 'js/buttons.js' %}"></script>
 
 {% endblock %}
