Transform buttons to anchors

--- a/DjangoPlaylisty/templates/generated_playlist.html
+++ b/DjangoPlaylisty/templates/generated_playlist.html
@@ -11,14 +11,13 @@
         </iframe>
     </div>
     <div class="buttons-container">
-        <button class="fancy-button" id="home-button" data-url="/">
+        <a class="fancy-button" id="home-button" href="/">
             Home
-        </button>
-        <button class="fancy-button" id="create-playlist-button" data-url="/createplaylist">
+        </a>
+        <a class="fancy-button" id="create-playlist-button" href="/createplaylist">
             Create playlist
-        </button>
+        </a>
     </div>
 </section>
-<script src="{% static 'js/buttons.js' %}"></script>
 
 {% endblock %}
