--- a/DjangoPlaylisty/templates/base.html
+++ b/DjangoPlaylisty/templates/base.html
@@ -22,8 +22,8 @@
     <aside>
       <p class="footer-tittle">LINKS</p>
       <a href="/">Home</a>
-      <a href="/createplaylist">Create playlist</a>
-      <a href="/whylogin">Why do you have to log in?</a>
+      <a href="{% url 'createplaylist' %}">Create playlist</a>
+      <a href="{% url 'whylogin' %}">Why do you have to log in?</a>
     </aside>
     <aside>
       <p class="footer-tittle">INFO</p>
@@ -32,10 +32,10 @@
     </aside>
     <aside>
       <p class="footer-tittle">CONTACT</p>
-      <a href="mailto:osoyinas@gmail.com">osoyinas@gmail.com</a>
-      <a href="https://t.me/osoyinas">Telegram</a>
-      <a href="https://github.com/osoyinas">Github</a>
-      <a href="www.linkedin.com/in/osoyinas">Linkedin</a>     
+      <a target="_blank" rel="noreferrer noopener" href="mailto:osoyinas@gmail.com">osoyinas@gmail.com</a>
+      <a target="_blank" rel="noreferrer noopener" href="https://t.me/osoyinas">Telegram</a>
+      <a target="_blank" rel="noreferrer noopener" href="https://github.com/osoyinas">Github</a>
+      <a target="_blank" rel="noreferrer noopener" href="https://www.linkedin.com/in/osoyinas">Linkedin</a>     
     </aside>
   </div>
 </footer>
