--- a/DjangoPlaylisty/templates/seo.html
+++ b/DjangoPlaylisty/templates/seo.html
@@ -15,7 +15,7 @@
 <meta property="og:image" content="https://playlisty.es/static/img/icon.png" />
 <meta property="og:url" content="https://playlisty.es/" />
 <meta property="og:type" content="website" />
-<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Playlisty - Spotify Playlist Generator" />
 <meta
   name="twitter:description"
