--- a/DjangoPlaylisty/templates/seo.html
+++ b/DjangoPlaylisty/templates/seo.html
@@ -7,20 +7,15 @@
   content="playlisty, playlists, spotify, music, generator, personalized, generador, music"
 />
 <meta name="author" content="osoyinas" />
-<meta property="og:title" content="Playlisty - Spotify Playlist Generator" />
-<meta
-  property="og:description"
-  content="Playlisty is a platform that generates Spotify playlists based on your input. You can mix artists, albums or tracks."
-/>
-<meta property="og:image" content="https://playlisty.es/static/img/icon.png" />
-<meta property="og:url" content="https://playlisty.es/" />
-<meta property="og:type" content="website" />
+<meta property="og:title" content="Playlisty - Spotify Playlist Generator">
+<meta property="og:site_name" content="playlisty">
+<meta property="og:url" content="playlisty.es">
+<meta property="og:description" content="Playlisty is a platform that generates Spotify playlists based on your input. You can mix artists, albums or tracks.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://playlisty.es/static/img/icon.png">
+
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@osoyinas">
 <meta name="twitter:title" content="Playlisty - Spotify Playlist Generator">
 <meta name="twitter:description" content="Playlisty is a platform that generates Spotify playlists based on your input. You can mix artists, albums, or tracks.">
 <meta name="twitter:image" content="https://playlisty.es/static/img/icon.png">
-
-<meta name="twitter:image:src" content="https://playlisty.es/static/img/icon.png" />
-<meta name="twitter:url" content="https://playlisty.es/" />
-<meta name="twitter:creator" content="@osoyinas" />
