--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -712,7 +712,7 @@ h3 {
   min-width: 50px;
   height: 50px;
   border-radius: 1rem;
-  background-color: rgb(0, 0, 0, 0.8);
+  background-color: black;
   border: none;
   font-weight: 600;
   display: flex;
@@ -766,7 +766,7 @@ h3 {
   text-align: center;
   cursor: pointer;
   color: white;
-  background-color: rgb(0, 0, 0, 0.8);
+  background-color: black;
   outline: none;
   border: white;
   height: 50px;
